# lol-afk-tauri

./: .gitignore  package-lock.json  package.json
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config_struct.rs  lol.rs  main.rs  structs.rs
src/css/: styles.css
src/data/: champions.json
src/html/: index.html
src/js/: main.js
